--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
+    <script defer src="./assets/js/all.js"></script>
   </head>
   <body>
     <main class="main">
@@ -41,19 +42,21 @@
             <div class="work-title"><a href="">Google Clone</a></div>
           </div>
           <div class="works">
-            <img src="./google.png" alt="smaple work" />
+            <img src="./assets/google.png" alt="smaple work" />
             <div class="work-title"><a href="">Google Clone</a></div>
           </div>
         </div>
-     
       </section>
       <footer id="footer">
         <h2>Let's work together</h2>
         <p>How do you take your coffee?</p>
-        <span class="material-icons">
-          facebook
-          </span>
+        <a href=""> <i class="fas fa-user"></i> Facebook</a>
+        <a href=""><i class="fab fa-github-square"></i>Github</a>
+        <a href=""><i class="fab fa-twitter"></i>Twitter</a>
+        <a href=""><i class="fas fa-at"></i>Send a Mail</a>
+        <a href=""><i class="fas fa-mobile-alt"></i></i>Call Me</a>
       </footer>
-    </main>   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
