add media queries

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section id="welcome-section">
         <h1>Hey I am Glenn</h1>
         <p>a web developer</p>
-        <a href="" id="profile-link"></a>
+s
       </section>
       <section id="projects">
         <h2 class="project-head">These are some of my projects</h2>
@@ -50,11 +50,18 @@
       <footer id="footer">
         <h2>Let's work together</h2>
         <p>How do you take your coffee?</p>
-        <a href=""> <i class="fas fa-user"></i> Facebook</a>
-        <a href=""><i class="fab fa-github-square"></i>Github</a>
-        <a href=""><i class="fab fa-twitter"></i>Twitter</a>
-        <a href=""><i class="fas fa-at"></i>Send a Mail</a>
+        <a href="facebook.com"> <i class="fab fa-facebook-square"></i></i> Facebook</a>
+        <a target="_blank" id="profile-link" href="https://www.github.com/gwagsi"><i class="fab fa-github-square"></i>Github</a>
+        <a href="twitter.com"><i class="fab fa-twitter"></i>Twitter</a>
+        <a href="mailto:name@email.com"><i class="fas fa-at"></i>Send a Mail</a>
         <a href=""><i class="fas fa-mobile-alt"></i></i>Call Me</a>
+        <div class="line"></div>
+        <div class="text">
+          <p>**This is just a fake portfolio. All the projects and contact details given are not real.
+
+          </p>
+        
+        </div>
       </footer>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
