--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@ s
         <h2 class="project-head">These are some of my projects</h2>
         <div class="project-tile">
           <div class="works">
-            <img src="./google.png" alt="smaple work" />
+            <img src="./assets/pp.png" alt="smaple work" />
             <div class="work-title"><a href="">Google Clone</a></div>
           </div>
           <div class="works">
-            <img src="./google.png" alt="smaple work" />
+            <img src="./assets/pra.png" alt="smaple work" />
             <div class="work-title"><a href="">Google Clone</a></div>
           </div>
           <div class="works">
